--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,7 +31,7 @@
 	<color name="text_primary_light">#ffffffff</color>
 	<color name="text_secondary_light">#b3ffffff</color> <!-- 70% -->
 	<color name="text_disabled_light">#4dffffff</color> <!-- 30% -->
-
+	<color name="highlight_light">#33ffffff</color> <!-- 20% white -->
 
 	<!-- google's material design colours from
 	http://www.google.com/design/spec/style/color.html#color-ui-color-palette -->
