--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,7 +16,7 @@
 
 <resources>
 
-	<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+	<style name="AppTheme" parent="Theme.MaterialComponents.Light">
 		<item name="colorPrimary">@color/colorPrimaryDark</item>
 		<item name="colorPrimaryDark">@color/colorPrimaryDark</item>
 		<item name="colorAccent">@color/colorAccent</item>
@@ -85,5 +85,19 @@
 	<style name="Button">
 		<item name="android:textColor">@color/colorAccent</item>
 		<item name="android:textSize">@dimen/text_large</item>
+	</style>
+
+	<style name="Widget.RaisedButton" parent="@style/Widget.AppCompat.Button.Colored">
+		<item name="android:fontFamily">@font/google_sans</item>
+		<item name="android:textStyle">bold</item>
+		<item name="android:textColor">?colorPrimary</item>
+		<item name="android:background">@drawable/raised_button_background</item>
+		<item name="android:letterSpacing">0.025</item>
+		<item name="android:textAllCaps">false</item>
+		<item name="android:textSize">@dimen/text_xmedium</item>
+		<item name="android:paddingLeft">@dimen/spacing_double</item>
+		<item name="android:paddingRight">@dimen/spacing_double</item>
+		<item name="android:paddingTop">12dp</item>
+		<item name="android:paddingBottom">12dp</item>
 	</style>
 </resources>
