--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -16,6 +16,7 @@
 			android:text="@string/app_name"
 			android:layout_marginTop="@dimen/spacing_double"
 			android:textSize="@dimen/text_huge"
+			android:gravity="center_horizontal"
 			android:visibility="invisible"
 			android:layout_gravity="center"
 			tools:visibility="visible"
@@ -27,9 +28,11 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="@string/make_your_choice"
-			android:layout_marginStart="@dimen/spacing_normal"
-			android:layout_marginEnd="@dimen/spacing_normal"
-			android:textSize="@dimen/text_large"
+			android:layout_marginStart="@dimen/spacing_double"
+			android:layout_marginEnd="@dimen/spacing_double"
+			android:layout_marginTop="@dimen/spacing_tiny"
+			android:gravity="center_horizontal"
+			android:textSize="@dimen/text_xlarge"
 			android:visibility="invisible"
 			android:layout_gravity="center"
 			tools:visibility="visible"
