--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -66,10 +66,10 @@
 			android:focusable="true"
 			android:paddingStart="@dimen/spacing_normal"
 			android:paddingLeft="@dimen/spacing_normal"
-			android:paddingTop="@dimen/spacing_normal"
+			android:paddingTop="@dimen/spacing_xsmall"
 			android:paddingEnd="@dimen/spacing_normal"
 			android:paddingRight="@dimen/spacing_normal"
-			android:paddingBottom="@dimen/spacing_normal"
+			android:paddingBottom="@dimen/spacing_xsmall"
 			android:text="@string/open_source_licences"
 			/>
 	<TextView
@@ -85,10 +85,10 @@
 			android:focusable="true"
 			android:paddingStart="@dimen/spacing_normal"
 			android:paddingLeft="@dimen/spacing_normal"
-			android:paddingTop="@dimen/spacing_normal"
+			android:paddingTop="@dimen/spacing_xsmall"
 			android:paddingEnd="@dimen/spacing_normal"
 			android:paddingRight="@dimen/spacing_normal"
-			android:paddingBottom="@dimen/spacing_normal"
+			android:paddingBottom="@dimen/spacing_xsmall"
 			android:text="@string/rate_app"
 			/>
 
@@ -105,10 +105,10 @@
 			android:focusable="true"
 			android:paddingStart="@dimen/spacing_normal"
 			android:paddingLeft="@dimen/spacing_normal"
-			android:paddingTop="@dimen/spacing_normal"
+			android:paddingTop="@dimen/spacing_xsmall"
 			android:paddingEnd="@dimen/spacing_normal"
 			android:paddingRight="@dimen/spacing_normal"
-			android:paddingBottom="@dimen/spacing_normal"
+			android:paddingBottom="@dimen/spacing_xsmall"
 			android:text="@string/request"
 			/>
 
