--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -30,7 +30,7 @@
 			android:layout_gravity="center"
 			android:contentDescription="@null"
 			android:src="@drawable/logo"
-			android:layout_marginTop="@dimen/spacing_double"
+			android:layout_marginBottom="@dimen/spacing_big"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
@@ -44,11 +44,11 @@
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintTop_toTopOf="parent"
-			app:layout_constraintBottom_toTopOf="@+id/btnApply"
+			app:layout_constraintBottom_toTopOf="@+id/btnStart"
 			/>
 
 	<Button
-			android:id="@+id/btnApply"
+			android:id="@+id/btnStart"
 			style="@style/Widget.RaisedButton"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
