--- a/app/src/main/res/drawable/ripple_yellow.xml
+++ b/app/src/main/res/drawable/ripple_yellow.xml
@@ -4,7 +4,7 @@
 		android:color="@color/highlight_light">
 	<item>
 		<shape android:shape="rectangle">
-			<solid android:color="@color/yellow_dark" />
+			<solid android:color="@color/main_yellow" />
 			<corners android:radius="16dp" />
 		</shape>
 	</item>
