--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,9 +24,9 @@
 	<color name="main_blue">#005bbb</color>
 	<color name="main_blue_dark">#00478D</color>
 	<color name="main_yellow">#ffd500</color>
-	<color name="yellow_dark">#DBB600</color>
+	<color name="main_yellow_dark">#DBB600</color>
 
-	<color name="primary_transparent">#8a1a7eef</color>
+	<color name="primary_transparent">#8a00478D</color>
 	<color name="text_primary_dark">#de000000</color> <!-- 87% -->
 	<color name="text_secondary_dark">#8a000000</color> <!-- 54% -->
 	<color name="text_tertiary_dark">#61000000</color> <!-- 38% -->
