--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -35,7 +35,7 @@
 				android:layout_height="56dp"
 				android:gravity="center"
 				android:text="@string/tittle_settings"
-				android:textColor="@color/text_primary_light"
+				android:textColor="@color/main_yellow"
 				/>
 
 		<ImageButton
@@ -46,8 +46,8 @@
 				android:background="?android:selectableItemBackgroundBorderless"
 				android:contentDescription="@null"
 				android:padding="@dimen/spacing_normal"
-				app:srcCompat="@drawable/ic_arrow_back"
-				android:src="@drawable/ic_arrow_back"
+				app:srcCompat="@drawable/ic_arrow_back_yellow"
+				android:src="@drawable/ic_arrow_back_yellow"
 				/>
 
 	</FrameLayout>
