--- a/app/src/main/res/drawable/ripple_blue_dark.xml
+++ b/app/src/main/res/drawable/ripple_blue_dark.xml
@@ -4,7 +4,7 @@
 		android:color="@color/highlight_light">
 	<item>
 		<shape android:shape="rectangle">
-			<solid android:color="@color/colorAccentDark" />
+			<solid android:color="@color/main_blue_dark" />
 			<corners android:radius="32dp" />
 		</shape>
 	</item>
