--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -13,7 +13,7 @@
 			style="@style/Text.SectionLabel"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:text="@string/app_name"
+			android:text="@string/elections"
 			android:layout_marginTop="@dimen/spacing_double"
 			android:textSize="@dimen/text_huge"
 			android:gravity="center_horizontal"
