--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -87,6 +87,8 @@
 		<item name="android:textSize">@dimen/text_large</item>
 	</style>
 
+	<style name="Widget" parent="@android:style/Widget" />
+
 	<style name="Widget.RaisedButton" parent="@style/Widget.AppCompat.Button.Colored">
 		<item name="android:fontFamily">@font/google_sans</item>
 		<item name="android:textStyle">bold</item>
@@ -100,4 +102,29 @@
 		<item name="android:paddingTop">12dp</item>
 		<item name="android:paddingBottom">12dp</item>
 	</style>
+
+	<style name="Widget.BorderlessButton" parent="@style/Widget.MaterialComponents.Button.TextButton">
+		<item name="android:fontFamily">@font/google_sans</item>
+		<item name="android:textStyle">bold</item>
+		<item name="android:textColor">?colorPrimary</item>
+		<item name="android:letterSpacing">0.025</item>
+		<item name="android:textAllCaps">false</item>
+		<item name="android:paddingLeft">24dp</item>
+		<item name="android:paddingRight">24dp</item>
+		<item name="android:paddingTop">@dimen/spacing_normal</item>
+		<item name="android:paddingBottom">@dimen/spacing_normal</item>
+	</style>
+
+	<style name="TextAppearance.DialogTitle" parent="@style/TextAppearance.AppCompat.Title">
+		<item name="android:textSize">22sp</item>
+		<item name="android:fontFamily">@font/google_sans</item>
+		<item name="android:gravity">start</item>
+	</style>
+
+	<style name="TextAppearance.DialogContent" parent="@style/TextAppearance.AppCompat.Body1">
+		<item name="android:textSize">16sp</item>
+		<item name="android:textColor">?android:textColorSecondary</item>
+		<item name="android:gravity">start</item>
+	</style>
+
 </resources>
