--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,6 +35,12 @@
 		<!--<item name="android:windowTranslucentStatus">true</item>-->
 	</style>
 
+	<style name="AppTheme.Transparent" parent="AppTheme.TransparentStatusBar">
+		<item name="android:windowIsTranslucent">true</item>
+		<item name="android:windowBackground">@android:color/transparent</item>
+		<item name="android:windowContentOverlay">@null</item>
+	</style>
+
 	<style name="AppTheme.Light" parent="AppTheme" >
 		<item name="android:windowBackground">@color/md_white_1000</item>
 	</style>
