--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -20,6 +20,7 @@
 <FrameLayout
 		xmlns:android="http://schemas.android.com/apk/res/android"
 		xmlns:app="http://schemas.android.com/apk/res-auto"
+		xmlns:tools="http://schemas.android.com/tools"
 		android:id="@+id/container"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
@@ -30,7 +31,9 @@
 			android:layout_gravity="center"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:visibility="gone"/>
+			android:visibility="gone"
+			tools:visibility="visible"
+			/>
 
 	<androidx.recyclerview.widget.RecyclerView
 			android:id="@+id/recyclerView"
