- Show Locating progress; - Calculate footer height with navigation bar height.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -48,4 +48,5 @@
 	<dimen name="divider_height">1dp</dimen>
 
 	<dimen name="toolbar_height">56dp</dimen>
+	<dimen name="footer_height">90dp</dimen>
 </resources>
