--- a/app/src/main/res/layout/activity_poll.xml
+++ b/app/src/main/res/layout/activity_poll.xml
@@ -63,7 +63,7 @@
 			android:contentDescription="@null"
 			android:text="@string/btn_vote2"
 			android:visibility="invisible"
-			android:layout_marginBottom="@dimen/spacing_normal"
+			android:layout_marginBottom="@dimen/spacing_double"
 			android:background="?android:attr/selectableItemBackground"
 			android:layout_gravity="bottom|center_horizontal"
 			/>
