--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -47,6 +47,19 @@
 			app:layout_constraintBottom_toTopOf="@+id/btnStart"
 			/>
 
+	<ProgressBar
+			android:id="@+id/progress"
+			android:layout_gravity="center"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="@dimen/spacing_double"
+			android:visibility="gone"
+			tools:visibility="visible"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintBottom_toTopOf="@+id/btnStart"
+			/>
+
 	<Button
 			android:id="@+id/btnStart"
 			style="@style/Widget.RaisedButton"
