- Check network before vote; - Show vote results, and percentages; - Fix diff utils errors.

--- a/app/src/main/res/layout/fragment_votes_list.xml
+++ b/app/src/main/res/layout/fragment_votes_list.xml
@@ -97,6 +97,7 @@
 			android:clickable="true"
 			android:focusable="true"
 			android:text="@string/vote_results"
+			android:elevation="12dp"
 			android:background="@drawable/ripple_blue_dark"
 			/>
 </FrameLayout>
