--- a/app/src/main/res/layout/fragment_results.xml
+++ b/app/src/main/res/layout/fragment_results.xml
@@ -44,7 +44,7 @@
 	<FrameLayout
 			android:id="@+id/pnlToolbar"
 			android:layout_width="match_parent"
-			android:layout_height="100dp">
+			android:layout_height="wrap_content">
 
 		<TextView
 				style="@style/Text.SectionLabel"
@@ -95,6 +95,7 @@
 			android:clickable="true"
 			android:focusable="true"
 			android:text="@string/votes"
+			android:elevation="12dp"
 			android:background="@drawable/ripple_yellow"
 			/>
 </FrameLayout>
