Check if device already voted before vote.

--- a/app/src/main/res/layout/list_item_results.xml
+++ b/app/src/main/res/layout/list_item_results.xml
@@ -75,7 +75,7 @@
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:textStyle="bold"
-				android:textSize="@dimen/text_xmedium"
+				android:textSize="@dimen/text_large"
 				android:fontFamily="@font/google_sans"
 				android:paddingLeft="@dimen/spacing_normal"
 				android:paddingStart="@dimen/spacing_normal"
