Decrease size of candidates icons; Remove unused app icons.

--- a/app/src/main/res/layout/list_item_poll.xml
+++ b/app/src/main/res/layout/list_item_poll.xml
@@ -78,8 +78,8 @@
 			android:id="@+id/list_item_image"
 			android:layout_width="80dp"
 			android:layout_height="80dp"
-			app:srcCompat="@mipmap/ic_elections"
-			android:src="@mipmap/ic_elections"
+			app:srcCompat="@mipmap/ic_elections2"
+			android:src="@mipmap/ic_elections2"
 			android:layout_gravity="center_vertical"
 			android:scaleType="centerCrop"
 			android:layout_marginStart="@dimen/spacing_normal"
