Show small loading progress, when local data updating from remote

--- a/app/src/main/res/layout/dialog_layout.xml
+++ b/app/src/main/res/layout/dialog_layout.xml
@@ -47,7 +47,7 @@
 			android:textAppearance="@style/TextAppearance.DialogContent" />
 
 	<LinearLayout
-			android:layout_width="match_parent"
+			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:gravity="end"
 			android:layout_marginTop="@dimen/spacing_normal"
